--- a/apps/vercel-app/.eslintrc.json
+++ b/apps/vercel-app/.eslintrc.json
@@ -10,7 +10,7 @@
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {
-        "@next/next/no-html-link-for-pages": ["error", "apps/desk/pages"]
+        "@next/next/no-html-link-for-pages": ["error", "apps/vercel-app/pages"]
       }
     },
     {
