--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@nrwl/eslint-plugin-nx": "13.10.6",
     "@nrwl/jest": "13.10.6",
     "@nrwl/linter": "13.10.6",
-    "@nrwl/nx-cloud": "latest",
+    "@nrwl/nx-cloud": "14.6.0",
     "@nrwl/react": "13.10.6",
     "@nrwl/web": "13.10.6",
     "@nrwl/workspace": "13.10.6",
