--- a/apps/next-app/.eslintrc.json
+++ b/apps/next-app/.eslintrc.json
@@ -1,16 +1,16 @@
 {
   "extends": [
     "plugin:@nrwl/nx/react-typescript",
-    "../../.eslintrc.json",
     "next",
-    "next/core-web-vitals"
+    "next/core-web-vitals",
+    "../../.eslintrc.json"
   ],
-  "ignorePatterns": ["!**/*"],
+  "ignorePatterns": ["!**/*", ".next/**/*"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {
-        "@next/next/no-html-link-for-pages": ["error", "apps/vercel-app/pages"]
+        "@next/next/no-html-link-for-pages": ["error", "apps/next-app/pages"]
       }
     },
     {
@@ -22,6 +22,9 @@
       "rules": {}
     }
   ],
+  "rules": {
+    "@next/next/no-html-link-for-pages": "off"
+  },
   "env": {
     "jest": true
   }
