--- a/package.json
+++ b/package.json
@@ -2,54 +2,49 @@
   "name": "monorepo-vercel-app",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {
-    "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test"
-  },
+  "scripts": {},
   "private": true,
   "dependencies": {
-    "@nrwl/next": "13.10.6",
-    "core-js": "^3.6.5",
-    "next": "12.1.2",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "regenerator-runtime": "0.13.7",
-    "tslib": "^2.0.0"
+    "@nrwl/next": "15.8.6",
+    "next": "13.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@nrwl/cli": "13.10.6",
-    "@nrwl/cypress": "13.10.6",
-    "@nrwl/eslint-plugin-nx": "13.10.6",
-    "@nrwl/jest": "13.10.6",
-    "@nrwl/linter": "13.10.6",
-    "@nrwl/nx-cloud": "14.6.0",
-    "@nrwl/react": "13.10.6",
-    "@nrwl/web": "13.10.6",
-    "@nrwl/workspace": "13.10.6",
-    "@testing-library/react": "13.0.0",
-    "@testing-library/react-hooks": "7.0.2",
-    "@types/jest": "27.0.2",
-    "@types/node": "16.11.7",
-    "@types/react": "18.0.0",
-    "@types/react-dom": "18.0.0",
-    "@typescript-eslint/eslint-plugin": "~5.18.0",
-    "@typescript-eslint/parser": "~5.18.0",
-    "babel-jest": "27.2.3",
-    "cypress": "^9.1.0",
-    "eslint": "~8.12.0",
-    "eslint-config-next": "12.1.2",
+    "@babel/preset-react": "^7.14.5",
+    "@nrwl/cypress": "15.8.6",
+    "@nrwl/eslint-plugin-nx": "15.8.6",
+    "@nrwl/jest": "15.8.6",
+    "@nrwl/js": "15.8.6",
+    "@nrwl/linter": "15.8.6",
+    "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "15.8.6",
+    "@nrwl/workspace": "15.8.6",
+    "@testing-library/react": "14.0.0",
+    "@types/jest": "^29.4.0",
+    "@types/node": "18.14.2",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "babel-jest": "^29.4.1",
+    "cypress": "^12.2.0",
+    "eslint": "~8.15.0",
+    "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-react": "7.29.4",
-    "eslint-plugin-react-hooks": "4.4.0",
-    "jest": "27.2.3",
-    "nx": "13.10.6",
-    "prettier": "^2.5.1",
-    "react-test-renderer": "18.0.0",
-    "ts-jest": "27.0.5",
-    "typescript": "~4.6.2"
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "nx": "15.8.6",
+    "prettier": "^2.6.2",
+    "react-test-renderer": "18.2.0",
+    "ts-jest": "^29.0.5",
+    "ts-node": "10.9.1",
+    "typescript": "~4.9.5"
   }
 }
